fixed overflow issue

--- a/wp-content/themes/inspiry-theme/css/front-page.css
+++ b/wp-content/themes/inspiry-theme/css/front-page.css
@@ -155,6 +155,7 @@ padding: 20px 20px;
    margin: 20px 20px;
    min-width: 500px;
 }
+
 .loving-section .flex .cards>div{ 
     display: flex; 
     flex-direction: row;
@@ -169,7 +170,12 @@ padding: 20px 20px;
 .loving-section .flex a:hover{ 
    text-decoration: underline;
 }
-
+@media (max-width:500px){
+    .loving-section .flex .cards{ 
+       min-width: 200px;
+    }
+    
+}
 @media (max-width:1300px){ 
     .loving-section{ 
         top: 150px;
